avoid horizontal overflow

--- a/theme.css
+++ b/theme.css
@@ -94,6 +94,15 @@ body, html {
     float: right;
 }
 
+/* Avoid overflow horizontally */
+.katex-display,table {
+	overflow:auto;
+}
+a {
+	word-wrap: break-word;
+}
+
+
 /* narrow screen */
 @media only screen and (max-width: 1100px) {
     .hide-narrow {
